# TheMonitor

./: .gitignore  README.md  config.yaml  logo_prompt.md  pyproject.toml  requirements.txt
docs/: ARCHITECTURE.md  CONFIGURATION.md  TODO.md  TROUBLESHOOTING.md
tests/: __init__.py  test_config.py  test_detector.py  test_habits.py  test_launcher.py  test_mediapipe_engine.py  test_notifier.py  test_rules.py  test_ui.py
themonitor/: __init__.py  __main__.py  cli.py  config.py  daemon.py  ui.py
themonitor/habits/: __init__.py  base.py  eye_break.py  stand_up.py  stretch.py  water.py
themonitor/notifications/: __init__.py  notifier.py
themonitor/posture/: __init__.py  detector.py  mediapipe_engine.py  rules.py
themonitor/startup/: __init__.py  launcher.py
