[project]
name = "monitor"
version = "0.1.0"
description = "Local-first desktop posture monitoring assistant"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}

dependencies = [
    "opencv-python>=4.8",
    "mediapipe>=0.10",
    "winotify>=1.1",
    "pyyaml>=6.0",
    "numpy<2.0.0",
    "Pillow>=10.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
]

[project.scripts]
monitor = "themonitor.cli:main"

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["themonitor"]

[tool.pytest.ini_options]
testpaths = ["tests"]
